Bug 156595 - LO crash when deleting a table row in a row with a hidden deleted table column at the beginning.
Summary: LO crash when deleting a table row in a row with a hidden deleted table colum...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: bisected, regression
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-08-03 12:44 UTC by NISZ LibreOffice Team
Modified: 2023-08-14 09:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (8.50 KB, application/vnd.oasis.opendocument.text)
2023-08-03 12:45 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-08-03 12:44:49 UTC
Description:
With change tracking enabled to delete a table row in a row with a hidden deleted table column at the beginning. 
Libre office crashes.

Steps to Reproduce:
1. Open attached document.
2. Delete a row.


Actual Results:
LO crash.

Expected Results:
LO not crash.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34387332173782498acd4998c7c665d04ebc3c7d
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-08-03 12:45:30 UTC
Created attachment 188746 [details]
Sample file
Comment 2 Commit Notification 2023-08-03 12:54:41 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d17b16215629ff078d5707309115233d4752f7d8

tdf#156595 sw tracked table column: fix crash at row deletion

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Stéphane Guillou (stragu) 2023-08-03 13:24:23 UTC
As already mentioned in fixing commit message, regression from aff269c18b9029fec992135a406dc5031927c401.

Also repro in 7.6.0.2, but cherrypick already in gerrit: https://gerrit.libreoffice.org/c/core/+/155295
Comment 4 Commit Notification 2023-08-14 09:13:23 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/855a43795d047445ab59d6de889b858f4f8e0f79

tdf#156595 sw tracked table column: fix crash at row deletion

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.